# TwixT

./: .gitignore  Cargo.toml  Readme.md  __init__.py  boardlocation.py  config.py  handler.py  nn  server.py  test.txt
CUDA/: handler.py  server.py
CUDA/clients/: AI.py  Enemy.py
basic_game_with_ai/: main.py
clients/: AI.py  Enemy.py
config/: __init__.py  config.py
examples/: main.rs
game/: __init__.py
helpers/: __init__.py  boardlocation.py  game.py  general.py  server.py  setup.py
numba/: config.py  grapic.py  handler.py  server.py
numba/clients/: AI.py  Enemy.py
old/CUDA/: handler.py  server.py
old/CUDA/clients/: AI.py  Enemy.py  __init__.py
old/basic_game_with_ai/: main.py
python/: handler.py
python/clients/: AI.py  Enemy.py  __init__.py
python/config/: __init__.py
python/helpers/: __init__.py  boardlocation.py  game.py  server.py
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs  structures.rs  trainer.rs
src/clients/: mod.rs  neural_network.rs  simple_client.rs
src/structures/: mod.rs
src/structures/interface/: mod.rs  server.rs  xml.rs
