[package]
name = "twixt"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[features]
# no features by default
default = ["internal_server", "simple_client", "neural_network"]
simple_client = ["rand"]
neural_network = []
internal_server = []
xml = []

[dependencies]
rustc-serialize = "0.3.16"
term-painter = "0.2.1"
time = "0.1.34"
rand = { version = "0.3.0", optional = true }
